<resources>
    <string name="app_name">Whats in NPM</string>
    <string name="app_description">Augmented Reality Artifacts in NPM</string>
    <string name="activity_splash_title">Whats in NPM</string>
    <string name="activity_splash_subtitle">國立故宮博物院第一屆新媒體創意競賽</string>
    <string name="about_title">關於 藏 ‧ 故宮</string>
    <string name="about_text2">This sample app illustrates how to use the Vuforia ImageTargets feature. The app detects certain images and augments a 3D teapot on top of them. &lt;br />&lt;br />To use this app:&lt;br />1. Print the image targets located at &lt;a href="https://developer.vuforia.com/resources/samples/files">developer.vuforia.com/resources/samples/files&lt;/a>&lt;br />&lt;br />2. Point your device at any of the images&lt;br />&lt;br />3. See the teapot augmented on  top of the image&lt;br />&lt;br />© 2010 &#8211; 2013 Qualcomm Austria Research Center GmbH. All rights reserved.&lt;br />Subject to agreements at &lt;a href="http://developer.vuforia.com/legal/EULA">developer.vuforia.com/legal/EULA &lt;/a>&lt;&lt;br />&lt;br /></string>
    <string name="about_text">歡迎來到「藏 ‧ 故宮」！這是一款應用影像辨識技術的應用程式，透過這項技術，你可以將你的手機變成一個最棒的作品解說員！&lt;br />&lt;br />目前，此款程式儘針對台灣國立故宮博物院所舉辦「&lt;a href="http://www.npm.gov.tw/zh-TW/">乾隆皇帝的藝術品位&lt;/a>」特展之書畫部分進行文字解說，希望日後可以為各位解說更多的故宮藏物。&lt;br />&lt;br />如何使用：&lt;br />1.將手機的相機朝向所展示之書畫作品簡圖&lt;br />2.在程式辨識到展示之書畫作品時，會出現畫面資訊提醒使用者&lt;br />3.觸碰螢幕，程式會自動出現該作品的文字說明&lt;br />&lt;br />"乾隆皇帝的藝術品位"特展活動網址：&lt;a href="http://www.npm.gov.tw/zh-TW/">http://www.npm.gov.tw/zh-TW/ &lt;/a>&lt;br />&lt;br />台灣國立故宮博物院：&lt;a href="http://www.npm.gov.tw/zh-TW/">http://www.npm.gov.tw/zh-TW/ &lt;/a></string>
    <string name="button_start">開始體驗</string>
    <string name="content_desc_vuforia_logo">公司 Logo</string>
    <string name="content_desc_vuforia_background">公司</string>
    <string name="menu_flash_on">打開閃光燈</string>
    <string name="menu_flash_off">關閉閃光燈</string>
    <string name="menu_contAutofocus_on">Cont. Autofocus On</string>
    <string name="menu_contAutofocus_off">Cont. Autofocus Off</string>
    <string name="menu_switch_to_tarmac">觀賞其他畫作</string>
    <string name="menu_switch_to_stone_chips">觀賞字畫</string>
    <string name="menu_camera_title">悠遊選項</string>
    <string name="description_wang_words_1">《快雪時晴帖》，為晉朝書法家王羲之的墨寶，以行書寫成，現存此帖一般認為是唐代摹本。此帖材質為紙本，尺寸縱23公分，橫14.8 公分。如今則收藏於國立故宮博物院。\n\n全書二十八字，字字珠璣，被譽為「二十八驪珠」。至明清年間，為降清明官馮銓所藏有。康熙十八年（1679年），馮銓之子馮源濟將此墨本呈獻給皇帝，在乾隆十一年（1746年）與王獻之的《中秋帖》以及王珣的《伯遠帖》合稱「三希」，一起放在宮內「三希堂」中，成為「三希堂」第一珍品。</string>
    <string name="title_wang_words_1">快雪時晴帖</string>
    <string name="button_close">關閉說明</string>
    <string name="ready_to_show_info">請觸碰螢幕顯示出處</string>
    <string name="description_wang_words_2">《快雪時晴帖 II》，為晉朝書法家王羲之的墨寶，以行書寫成，現存此帖一般認為是唐代摹本。此帖材質為紙本，尺寸縱23公分，橫14.8 公分。如今則收藏於國立故宮博物院。\n\n全書二十八字，字字珠璣，被譽為「二十八驪珠」。至明清年間，為降清明官馮銓所藏有。康熙十八年（1679年），馮銓之子馮源濟將此墨本呈獻給皇帝，在乾隆十一年（1746年）與王獻之的《中秋帖》以及王珣的《伯遠帖》合稱「三希」，一起放在宮內「三希堂」中，成為「三希堂」第一珍品。</string>
    <string name="title_wang_words_2">快雪時晴帖 II</string>
	<string name="title_pa01">清無款油畫像 框</string>
	<string name="description_pa01">朝代：清\n尺寸：94x52.5 公分\n\n本畫在廿世紀初，曾被盛傳成香妃像。高宗皇帝一生共有兩位皇后，嬪妃及貴人十五位，其中包括滿人、蒙古人、漢人與回人。香妃（1734－1788）是回族人，父親名和札賫台吉。她被獻入宮之初，僅是一名「貴人」，爾後才升成「容嬪」，最後更晉升為「容妃」。關於香妃的傳奇故事，雖然與真實情況不盡侔合，但卻帶有濃厚的悲劇色彩，十分膾炙人口。據說她本是霍集占之妻，在大將軍兆惠平定回疆時，被強搶入宮。因為體有異香，乾隆皇帝深深為之傾倒，特意替她興造回式的樓閣，四周並有回教堂、回街道圍繞，希望能夠紓解美人思鄉的情愁。可是香妃卻心繫昔日的回族夫婿，視高宗如仇敵，終日鬱鬱不樂，甚至身懷利刃，使乾隆無法親近。最後，皇太后為了防患於未燃，索性趁著皇帝祭天之際，命人將香妃絞殺。本幅的畫材是紙板，而且人像的下額處有明顯接縫。倘若是獨幅肖像畫，似乎不應在顏面部位出現接痕，因此推測畫像可能屬於宮廷大型裝飾壁畫（又名「貼落」）的局部，壁畫殘損後，將較完好的部分予以裁切、裝框，才成為今日所見的形制。至於這幀畫像，畫的究竟是何許人？目前尚難有定論，不過既然畫幅源自清宮內苑，畫中人縱使不是香妃，也應是具有相當地位的女子。院藏繪畫中的女性，鮮少以戎裝形象出現者，此幀畫像的流傳，無疑可以為中國女性的形象歷史，平添另一富有異國色彩的新穎面貌。</string>
	<string name="title_pa02">清謝遂職貢圖（一） 卷</string>
	<string name="description_pa02">朝代：清\n\n宋人史繩祖著《學齋佔畢》引李公麟語云：「梁元帝時，蕭繹鎮荊時作貢職圖，狀其形，而識其土俗，首虜而後蜑，凡三十餘國。」貢職圖即職貢圖，「職」即職方，是古代官名，職貢即職方貢物。《周禮˙夏官》有職方氏，掌天下地圖，主四方職貢。我國歷代以來，邊疆民族及屬邦與中央的關係，日益密切，職貢有圖，方物有錄，所謂職貢圖，其實就是我國邊疆民族及外邦屬國的民俗圖像。國立故宮博物院典藏「職貢圖」，乾隆年間謝遂繪製，共四卷，各卷縱約三三.九公分，橫約一四一0˙四公分至一八三六˙一公分不等。第一卷共七十圖，為西洋、外藩及朝貢屬邦圖像；第二卷共六十一圖，為東北、福建、湖南、廣東、廣西等省邊疆民族圖像；第三卷共九十二圖，為甘肅、四川等省邊疆民族圖像；第四卷共七十八圖，為雲南、貴州等省邊疆民族圖像，合計共三0一圖，俱就沿邊省分各督撫進呈圖樣，以地相次，分卷繪製增補而成，有漢、滿文圖說及題識。 「職貢圖」是一套瑰麗的中外民俗畫史，由於清朝政府積極促進邊疆與內地的政治、經濟、文化關係，各民族日益融合，奠定我國多民族的基礎，「職貢圖」的繪製充分反映了乾隆皇帝對東西洋各國、朝貢屬邦的貿易政策，以及對邊疆地區的民族政策。 (莊吉發)</string>
	<string name="title_pa03">清賈全畫二十七老沈初書詩 卷</string>
	<string name="description_pa03">朝代：清\n作者：賈全;沈初\n\n</string>
	<string name="title_pa04">清畫院畫十二月月令圖十月 軸</string>
	<string name="description_pa04">朝代：清\n作者：院畫家\n尺寸：128 公分\n\n清朝的院本十二月令圖，畫上並未簽署作者的姓名，但從筆墨的習慣來判斷，可能是唐岱丁觀鵬等幾位宮廷畫家合作的。畫的主題，在描繪一年十二個月中，民間生活情形。 十月，已進入了初冬，嚴霜把人們的活動從戶外驅入了室內。古器名畫，卷軸彝鼎，成為室內的雅玩。另外的一間屋子裡，卻畫著一個老畫師替人寫照；婦女們都在內院，他們鳴彈樂器，縫製衣物，對坐下棋，也生活的非常寧謐。</string>
	<string name="title_pa05">清姚文瀚歲朝歡慶圖 軸</string>
	<string name="description_pa05">朝代：清\n作者：姚文瀚\n尺寸：61 公分\n\n此圖描繪過年闔家歡慶團圓的場面。男女主人端坐廳堂，孩童們則敲鑼擊鼓、吹笙拍板，耍玩傀儡、點燃炮竹，嬉戲於庭院中。家僕或持酒壺侍立，或端送糕果，穿梭於前廳迴廊裡。後院婦女忙碌準備年夜飯，遠處閣樓上男僕合力懸掛大燈籠。庭院火盆燒著松枝、芝麻秸，室內佈置著「四季花卉」大立屏，朱几瓶插牡丹，烘托出滿堂富貴吉祥的年味。\n\n姚文瀚（1713－？）字濯亭，順天（今北京）人。胡敬《國朝院畫錄》：「姚文瀚，工人物，兼擅釋道畫像。」乾隆八年（1743）進入如意館行走，在宮中服務時間長達四十多年，然其離開宮廷及去世時間卻不可考。</string>
	<string name="title_pa06">清沈源畫御製冰嬉賦 軸</string>
	<string name="description_pa06">朝代：清\n作者：沈原\n尺寸：121 公分\n\n沈源在乾隆朝是內廷畫畫人之一，畫史上說他善畫佛像，從故宮博物院的藏品與造辦處檔案中他受命繪作的情形看來，他也善長界畫。這幅「御製冰嬉賦圖」是沈源受命描繪八旗子弟在瀛臺溜冰的情景。畫家題款於右下角，曰：「陳沈源恭畫」，鈐印：「臣沈源印」、「恭畫」。畫幅的左上方有清高宗親筆所書寫的「冰嬉賦」全文與序。 從清高宗的序文中可以知道，他認為冬日在冰上疾行是滿州人的「國俗」之一。滿州人入關以後到乾隆初年已近百年，關內滿人漢化日深，對於昔日的習俗往往不知，更遑論原來八旗子弟馬上得天下的功夫，顯示出有遺忘或退化的現象。清高宗時期每逢冬至以後或在臘八日，往往奉太后到太液池冰上舉行冰嬉之典，一方面以示不忘本，一方面也藉此修武事。事畢，往往依例按照名次行賞。冰嬉之時，皇帝常常乘坐冰床或於旁觀賞，或與八旗子弟同樂。此畫中下方似龍舟而罩帷幕者即是皇帝的冰床。乾隆朝內廷畫家曾一再受命繪作冰嬉賦圖，皇帝也不止一次抄錄自己的這篇賦，甚至抄錄成手卷命人送到盛京（今瀋陽）宮殿內典藏。</string>
	<string name="title_pa07">清張廷彥畫平定烏什戰圖 軸</string>
	<string name="description_pa07">朝代：清\n作者：張廷彥\n尺寸：148.4 公分\n\n張廷彥(約活動於1744－1771)江蘇揚州人， 張震、張為邦、張廷彥為供奉於康熙、雍正、乾隆朝子孫三代宮廷畫家。 張廷彥約在乾隆九年(1744)入宮， 善畫界畫樓閣、人物， 曾參與許多節令慶典大畫製作， 如「萬國來朝圖」、「清明上河圖、「乾隆帝行樂圖」等。 烏什位於新疆阿克蘇及喀什噶爾之間， 依山築城， 有險可恃， 田饒水足， 物富民豐， 為回部重地。 此圖描繪乾隆三十年(1765)維吾爾族烏什首領小伯克賴黑木圖拉聚眾叛， 清廷派兵圍攻， 兩軍展開激戰， 並攻陷回軍的歷史紀實畫。\n\n 此張戰圖可以看到野戰、攻城、攻碉堡的畫面。 清步兵及炮隊圍住土城， 敵軍駐守城內， 清軍或攀梯， 或騎馬破城而入。 畫面左部敵軍自城牆缺口處突圍， 清軍騎兵以弓箭、火槍追擊。 近景為清軍宿營的帳篷， 樹叢間有托運的牛馬、駱駝。 清軍的武器以弓箭、刀矛、長槍為主， 戰鬥中憑藉著靈活的戰略，以及威力強勁的騎射放槍與衝擊戰術取勝。 整幅畫面寬廣開闊， 採全景式構圖， 運用遠近焦點透視法， 人物情節繁多， 但皆能刻劃入微。 (林莉娜)</string>
	<string name="title_pa08">清張若澄畫鎮海寺雪景 軸</string>
	<string name="description_pa08">朝代：清\n作者：張若澄\n尺寸：85 公分\n\n張若澄，若靄弟。清安徽桐城人，乾隆乙丑（一七四五）進士。字鏡堅、鏡壑，一字鍊雪。善畫梅、並工翎毛。  乾隆丙寅（一七四六）初冬幸五臺山，中途遇雪，曾命若靄寫鎮海寺雪景。庚午（一七五０）再遊，又遇雪，因憶前事，命若澄賡作，並題詩記其事。若澄筆力似不勝其兄，此圖較若靄略覺拘謹。</string>
	<string name="title_pa09">清董邦達畫四美具合幅 軸</string>
	<string name="description_pa09">朝代：清\n作者：董邦達\n尺寸：136 公分\n\n董邦達（一六九九－一七六九），浙江富陽人。工畫山水，宗法元人筆墨。明末顧從義藏有顧愷之女史箴圖、李公麟瀟湘臥遊、蜀江圖、九歌圖，董其昌因其乃流傳有序名蹟，為題「四美具」於其室。四卷後來失散，乾隆十一年陸續轉入內府。畫上梁詩正、汪由敦、張若靄跋文，提及乾隆十年曾以快雪、中秋、伯遠帖於三希堂貯之，而四美「實與三希互相輝映」。此圖為董氏〈畫四美具合幅〉二軸之右幅。</string>
	<string name="title_pa10">晉 王羲之 快雪時晴帖 冊</string>
	<string name="description_pa10">朝代：晉\n作者：王羲之\n尺寸：本幅縱23公分 橫14.8公分\n\n王羲之（約303－361），祖籍山東，出身仕族世家，西晉末隨父南渡，作過右軍將軍，會稽內史，東晉永和年間（345－356）去職，與東土名士盡山水之游。熱衷詩歌，音樂與書法。他學書歷程是由近而古，轉益多師，取資廣博，尤其精研體勢，將秦篆漢隸各種不同的筆法，融於真行草體中，形成最佳體勢，所以唐朝人稱頌他「兼撮眾法，備成一家，為萬世宗師」。\n\n這是一件行楷書短簡，內容是大雪之後向友人問候。明代鑑賞家詹景鳳指出，此蹟筆法圓勁古雅，意態閑逸，對趙孟頫的行書有很深的影響。從用筆來看，此帖多圓鈍的用筆，點畫勾挑都不露鋒，結體平穩勻稱，在優美的姿態之中，流露出質樸內斂的意韻。乾隆皇帝極珍愛此蹟，譽之為「天下無雙，古今鮮對」。乾隆十一年，他將此蹟與王獻之的「中秋帖」，王珣的「伯遠帖」合稱「三希」，寶藏在「三希堂」中。此帖一般認為是唐代精摹本。\n\n釋文：羲之頓首。快雪時晴。佳想安善。未果為結。力不次。王羲之頓首。山陰張侯。"</string>
	<string name="title_pa11">宋林逋手札二帖 冊</string>
	<string name="description_pa11">朝代：宋\n作者：林逋\n\n林逋（967－1028），字君復，錢塘（今杭州）人，少力學好古，嘗遊於李建中門下，後隱於西湖之孤山，不娶無子，種梅養鶴，仁宗諡和靖先生。書法工行草書，蘇軾認為他的字似李建中而清瘦。歷來評論認為林逋書風的清勁處，正如同其詠梅名句「暗香疏影」一般。作品的寬鬆行距所產生的疏朗逸趣，加上用筆的尖削與轉折的方硬，都讓他的書風更加清瘦勁挺，使人一望而難以忘懷。</string>
	<string name="title_pa12">清高宗御臨蘇軾帖 軸</string>
	<string name="description_pa12">朝代：清\n作者：清高宗\n尺寸：99.7x32.2公分\n\n清高宗姓名為愛新覺羅弘曆，清朝入關後第四代皇帝。滿族，為清世宗胤禎第四子。雍正十一年（1733），封和碩寶親王，十三年（1735）八月即位，年號「乾隆」，習稱「乾隆皇帝」。在位六十年。嘉慶元年（1796），傳位第十五子顒琰（嘉慶）（1760－1820），自為太上皇帝，仍掌軍國大政，直至去世，實際統治六十四年，是中國歷史上掌權時間最長的皇帝。乾隆也如古時候的中國兒童，一開始受教育，就是拿毛筆學習寫字。他一生對書法繪畫興趣一直不衰。自己說：「朕少年時，間涉獵書繪，登極後每緣幾暇，結習未忘，弄翰抒毫，動成卷軼。」由於宮中收藏大量的書畫，他比別人更有機會接觸歷史上的名蹟，因此他又說：「朕聽政之暇，翰墨自娛，內府所藏書家真蹟，無慮數十百種，展閱之餘，手自摹寫，品評題識，至於再三。」乾隆對〈王羲之快雪時晴帖〉相當愛好，也確實勤加臨習。乾隆強調〈快雪時晴帖〉之書法風格，書寫的勁力是含蓄圓潤，或者說寫來通篇意態悠閒。乾隆也喜歡學習蘇軾的字，本幅結字，固然是效蘇字的「筆圓」法，然而從蘇軾（1036－1101）特有字的結體，無由得見蘇軾的豐肥，或所謂肌肉骨妍，乃至字的結體左右明顯的有粗細不同的特徵，反而還是融合了王羲之的特色。（王耀庭）清高宗(西元一七一一－一七九九年) ，名愛新覺羅弘曆，雍正十三年即位，年號乾隆，在位六十年，文治武功皆頗有成就。天賦聰穎，詩書畫無一不能，又兼富收藏。酷愛書法的清高宗，在聽政之暇常以翰墨自娛，晉唐以來書家多為其臨寫對象。本件清高宗雖以行書寫蘇軾〈硯銘〉，然而卻不見蘇軾特有的結字與豐腴的筆法，顯然是出於己意之作，仍可看出乾隆傳承自王羲之的書法風格。</string>
	<string name="title_pa13">元 趙孟頫 鵲華秋色 卷</string>
	<string name="description_pa13">朝代：元\n作者：趙孟頫\n尺寸：28.4x93.2公分\n\n趙孟頫（1254－1322）字子昂，號松雪道人，南宋宗室，後北上大都任官。此畫是元貞元年（1295）他自濟南路職位南返後，為友人周密（1232－1298）描繪其祖籍地貌景色之作。畫卷構圖簡潔，在一廣闊水澤坡岸間，右為尖聳的華不注山，左側是渾圓鵲山。畫中坡岸林木，與董源山水母題十分接近，然經趙孟頫的筆墨與設色後更具生趣，成一秀麗可人的自然佳景。黃公望從趙孟頫此類復古創新手法，得以掌握筆墨新活力。(20110609)</string>
	<string name="title_pa14">唐岱仿范寬秋山瀑布</string>
	<string name="description_pa14">朝代：清\n作者：唐岱\n尺寸：157.5x63.8公分\n\n無</string>
	<string name="title_pa15">清鄒一桂畫豐鄉慶節圖 軸</string>
	<string name="description_pa15">朝代：清\n作者：鄒一桂\n尺寸：144 公分\n\n鄒一桂（西元一六八六－一七七二年），江蘇無錫人。字原褒，號小山，又號讓卿，晚號二知老人。為世宗雍正五年（一七二七）進士，歷官至禮部侍郎，加尚書銜。徐善繪外，亦精通畫理，著有小山畫譜。平川繡嶺間，舟梁農舍，田疇茆屋分置。屋內長者圍爐取暖。廣場上，孩童或擊鼓奏樂；或舉挈著花燈玩耍，或在圍籬邊，又懼又喜地燃著炮竹。畫家描寫的正是新春元宵時節，太平鄉居樂景。本幅畫於辛未（西元一七五一年）新春，畫家時年六十六。</string>
	<string name="title_pa16">清金廷標採蘭圖高宗御題 軸</string>
	<string name="description_pa16">朝代：清\n作者：金廷標\n尺寸：136.4x86 公分\n\n無</string>
	<string name="title_pa17">清金廷標歲朝圖 軸</string>
	<string name="description_pa17">朝代：清\n作者：金廷標\n尺寸：96x65.9 公分\n\n此畫描寫歡樂慶祝新春的年節景象。孩童手執鑼鼓錘，吹奏琉璃喇叭，燃放竹杖嬉戲玩耍於園中。正月燃放爆竹，寓意「報平安」。庭院遍植天竺，古梅盤踞湖石，點出初冬寒意。漢白玉石欄杆及遠處門洞後香妃竹欄杆，隔斷出畫面的縱深空間。畫家描繪人物五官造型寫實生動，衣紋用筆勁利。 金廷標（活動於1757－1767），字士揆，浙江桐鄉人。南巡時，進呈＜白描羅漢冊＞，頗受讚賞，被召入畫院。廷標於乾隆三十二年（1767）逝世以後，乾隆帝還陸續為其作品題詩。</string>
	<string name="title_pa18">清丁觀鵬畫太簇始和 軸</string>
	<string name="description_pa18">朝代：清\n作者：丁觀鵬\n尺寸：179.3x108.4 公分\n\n丁觀鵬（約活動於1708～1771或稍後 ），順天（今北京）人。雍正（在位1722～1735）年間地位不高，在宮中向郎世寧、王致誠學習；乾隆朝擢升為一等畫畫人，常與其他御用畫家合畫皇帝指定的節令題材。他擅長運用西畫的明暗設色與焦點透視法，在畫面製造立體感。\n\n此圖屬於描寫歲時的十二月禁禦圖之一，所畫為正月初七各處懸燈結綵，是以紫禁城外西路建福宮（ 西花園）為畫中主體，描寫城內外的新春景象。花園主殿延春閣為重檐攢尖式屋頂建築（用於面積不大亭閣塔樓），作為園林配景十分協調。兩層建築立於漢白玉須彌座台基上，四角攢尖頂，四條斜脊交合於頂，上覆以黃琉璃寶頂，而用重檐做法，增加其富麗堂皇之感。亭之四面皆五楹，假山環繞前院。宮內樓閣、亭軒屋頂樣式有硬山頂、勾連搭卷棚頂、圓攢尖頂、四角攢尖頂等，屋面皆滿覆黃、紫、藍、綠各色琉璃瓦，若依等級來分，黃為上，紫藍次之，綠又次之，有區別等級作用，又具藝術裝飾效果。門窗採用官式格扇「 步步錦 」式樣，梁柱上繪《》形狀的旋子彩畫，額枋彩畫精細具體。  此圖為寫實的樓閣界畫，閣前有積翠亭，閣後有敬勝齋，東為吉雲樓。左下角可見惠風亭、存性門與靜宜軒，四周圍以牆垣，以廊廡相接。畫上方有凸形垛口的紫禁城牆，城外即是景山，左面大街為景山西街，街左為大高玄殿，大高玄殿門外清代官式「三間四柱七樓式」牌樓是北平市街最精巧的。圖中所繪建福宮花園中樓閣多在大火中焚毀，現僅存惠風亭，此圖幸能保存當時建築的風貌，為融合中西技藝之清代院畫代表作。</string>
	<string name="title_pa19">清院本漢宮春曉圖 卷</string>
	<string name="description_pa19">朝代：清\n作者：丁觀鵬\n尺寸：32.9x718.1 公分\n\n此圖完成於乾隆六年（一七四二），為宮庭畫家合力繪製，筆墨精細，設色濃豔，參以西法，人物富立體感。 長卷表現宮廷婦女的遊樂生活，背景是真實的清宮內苑。仕女由皇后、嬪妃以至宮女，近五十組群的仕女各行其樂，舉凡琴棋書畫、賞花鑑古、焚香品茗、小酌飲宴、笙歌曼舞、鞦韆嬉戲、攜子遊園等等，應有盡有。圖內茶酒一起擺置，也是一種宮中婦女的雅集聚會。漢宮春曉，乃描寫宮中嬪妃生活，借皇家園庭殿宇之盛，以騁其華縟藻麗之筆耳。歷代所傳畫本甚多，有畫毛延壽為嬪妃寫照者，亦有不畫此景者，可知原無一定故事。本院收藏院本漢宮春曉圖，即有三卷，本幅為乾隆六年，孫祐、周鯤、丁觀鵬等奉勅合繪，全長七一八公分。</string>
	<string name="title_pa20">宋劉松年琴書樂志圖 軸</string>
	<string name="description_pa20">朝代：宋\n作者：劉松年\n尺寸：136.4x47.5\n\n無</string>
	<string name="title_pa21">清錢維城畫花卉冊</string>
	<string name="description_pa21">朝代：清\n作者：錢維城\n尺寸：27.7x26.5 公分\n\n錢氏當年常侍駕笢巡游，同行同止，痔笢此當為其伴駕巡游時所作，類似於寫生冊。</string>
	<string name="title_pa22">元明人畫山水集景 冊</string>
	<string name="description_pa22">朝代：\n作者：\n尺寸：71x76 公分\n\n藍水遠從千澗落。玉山高並兩峰寒。丙子（西元一五七六年）仲夏文嘉。 明文嘉杜甫詩意</string>
	<string name="title_pa23">明仇英雙駿圖 軸</string>
	<string name="description_pa23">朝代：明\n作者：仇英\n尺寸：109.5x50.4 公分\n\n本幅計繪兩人雙駿，前一組為奚官控白馬，神態安詳，作舒散之狀；後一組圉人黑駿，則表情武勇，神采飛揚，相互間蔚成明顯對比。明中葉，韃靼屢寇邊關，此幅之作，或饒有深意。幅中線條粗細分明，筆勢極富起伏變化，有別於仇英精麗艷逸的一格。 畫幅未署年款，據上方文徵明書天馬賦的繫年，此作應成於庚子（一五四○），時仇英約四十七歲。</string>
	<string name="title_pa24">清郎世寧畫白海青 軸</string>
	<string name="description_pa24">朝代：清\n作者：郎世寧\n尺寸：141.3x88.9 公分\n\n郎世寧（西元一六八八－一七六六年），義大利人。十九歲，入天主教耶穌會為修士，習畫兼習建築。二十七歲來華傳教，召入內廷供奉，善畫人物花鳥，尤善畫馬。  白海青為獵鷹中之名種，其猛鷙之性，虎虎若生，韝簾等物，亦描摹神似，為畫中寫實之佳作。郎世寧以光影分明的畫法畫出白鷹身上羽毛的光澤、及鷹架上不同質料織品所造成的不同觸感，並把物像拉近觀者，只露出鷹架的局部，意圖製造出一種生動的臨場感。</string>
	<string name="title_pa25">清郎世寧畫花底仙尨 </string>
	<string name="button_audio">Audio introductions</string>
</resources>