<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/info_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_weight="60"
            android:padding="10dip"
            android:text="@string/title_wang_words_1"
            android:textColor="@color/holo_light_blue"
            android:textSize="@dimen/about_title" />

        <ImageButton
            android:id="@+id/btn_info_audio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="0"
            android:background="@color/black"
            android:contentDescription="@string/button_audio"
            android:src="@drawable/ic_speaker_on" />

        <ImageButton
            android:id="@+id/btn_info_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@null"
            android:contentDescription="@string/button_close"
            android:src="@android:drawable/ic_notification_clear_all" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/holo_light_blue" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/info_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/description_wang_words_1"
            android:textColor="@color/white"
            android:textSize="@dimen/about_text" />

    </ScrollView>

</LinearLayout>